--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "traveling-salesman",
   "version": "1.0.0",
-  "description": "Algorithm for traveling salesman problem",
+  "description": "Traveling Salesman problem solver with graph",
   "main": "index.js",
   "dependencies": {
     "jest": "^23.6.0"
   },
   "jest": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
   "scripts": {
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "jest"
   },
   "repository": {
