--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "jest": {},
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
+    "predeploy": "parcel build src/index.html --public-url /traveling-salesman/",
+    "deploy": "gh-pages -d dist",
     "test": "jest"
   },
   "repository": {
